Code/social-media-dashboard/k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: social-media-dashboard
spec:
  replicas: 2
  selector:
    matchLabels:
      app: social-media-dashboard
      tier: frontend
  template:
    metadata:
      labels:
        app: social-media-dashboard
        tier: frontend
    spec:
      containers:
        - name: frontend
          image: docker.io/frani1611/social-media-dashboard-frontend:2b9453c31dbb3dec8126260ab94eddc57e592a06
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
      imagePullSecrets:
      - name: regcred
