Code/social-media-dashboard/k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: social-media-dashboard
    tier: frontend
spec:
  selector:
    app: social-media-dashboard
    tier: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
