Code/social-media-dashboard/k8s/networkpolicy-allow-backend-egress-to-mongodb.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-backend-egress-to-mongodb
  namespace: social-media-dashboard
spec:
  podSelector:
    matchLabels:
      app: backend
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: mongodb
      ports:
        - protocol: TCP
          port: 27017
  policyTypes:
    - Egress
